objects/CS_ConfigSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Analytics_Use_Query_String_Path__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the org should be using analyticsUseQueryStringPath</description>
        <inlineHelpText>Used to determine if the org should be using analyticsUseQueryStringPath</inlineHelpText>
        <label>Analytics Use Query String Path</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Excerpt_Length__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Used to set the data-excerpt-length for Coveo Search Interface component.</description>
        <inlineHelpText>Used to set the data-excerpt-length for Coveo Search Interface component.</inlineHelpText>
        <label>Data Excerpt Length</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Results_Per_Page__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Used to set the data-results-per-page for Coveo Search Interface component.</description>
        <inlineHelpText>Used to set the data-results-per-page for Coveo Search Interface component.</inlineHelpText>
        <label>Data Results Per Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disable_Query_Syntax_for_User_Queries__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Disable Query Syntax for User Queries</description>
        <inlineHelpText>Disable Query Syntax for User Queries</inlineHelpText>
        <label>Disable Query Syntax for User Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableSearchAsYouType__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Search As You Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Sidebar_Editing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable editing of the Coveo sidebar in the case page layout</description>
        <inlineHelpText>Enable editing of the Coveo sidebar in the case page layout</inlineHelpText>
        <label>Enable Sidebar Editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objects_Whitelist__c</fullName>
        <defaultValue>&quot;KBInternalProcedures,KBAttachment,KBKnowledgeArticle,KBQuickStarts,KBGettingStarted,HelpDocs&quot;</defaultValue>
        <description>Contains all the object types as described in the @objecttype field in the Coveo index that can be made accessible to the Agents in their search results. Separate objecttype values by commas.</description>
        <inlineHelpText>Contains all the object types as described in the @objecttype field in the Coveo index that can be made accessible to the Agents in their search results. Separate objecttype values by commas.</inlineHelpText>
        <label>Objects Whitelist</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchAsYouTypeDelay__c</fullName>
        <defaultValue>500</defaultValue>
        <label>Search As You Type Delay</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CS_ConfigSettings</label>
</CustomObject>